--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 body {
-  background-image: url("bg.png") no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  background-image: url("bg.png");
   background-size: cover;
+  background-position-y: initial;
+  background-position-x: center;
 
 
 }
